# f256.rs

./: .gitignore  CHANGES.TXT  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml
analysis/: atan.sollya  bkm_fixp_lut.sollya  bkm_lut.sollya  cosine.sollya  fast_reduce.sollya  feynman_lut.sollya  fp_reduce.sollya  gen_powers_of_five.py  gen_ryu_helper_tables.py  gen_ryu_print_helper_tables.py  log.sollya  reduce.sollya  sine.sollya  trig.sollya
analysis/bkm_flop_lut/: Cargo.toml
analysis/bkm_flop_lut/src/: main.rs
analysis/calc_taylor_polynom_coeffs/: Cargo.toml
analysis/calc_taylor_polynom_coeffs/src/: main.rs
analysis/compute_required_bits/: Cargo.toml
analysis/compute_required_bits/src/: main.rs
analysis/payne_hanek/: Cargo.toml
analysis/payne_hanek/src/: main.rs
pow10_div_pow2_lut/: Cargo.toml  README.md
pow2_div_pow10_lut/: Cargo.toml  README.md
pow2_div_pow5_lut/: Cargo.toml  README.md
pow5_div_pow2_lut/: Cargo.toml
src/: TODO.md  arith.rs  big_decimal.rs  big_uint.rs  biguint.rs  consts.rs  f256.rs  float256.rs  from_float.rs  from_int.rs  lib.rs  num_traits.rs  rawfloat.rs  u256.rs  uint256.rs  unops.rs
src/big_uint/: mod.rs  uint128.rs
src/big_uint/uint_generic/: mod.rs
src/big_uint/uint_generic/binops/: add.rs  bitand.rs  bitor.rs  divrem.rs  mod.rs  mul.rs  shl.rs  shr.rs  sub.rs
src/binops/: add.rs  cmp.rs  div.rs  mod.rs  mul.rs  rem.rs
src/conv/: big_decimal.rs  from_float.rs  from_int.rs  mod.rs  to_int.rs
src/conv/from_str/: common.rs  fast_approx.rs  fast_exact.rs  float_repr.rs  mod.rs  powers_of_five.rs  slow_exact.rs
src/conv/to_str/: common.rs  dec_repr.rs  formatted.rs  mod.rs  powers_of_five.rs  to_fixed_prec.rs
src/from_str/: big_num.rs  common.rs  fast_approx.rs  fast_exact.rs  float_repr.rs  mod.rs  powers_of_five.rs  slow_exact.rs
src/fused_ops/: fma.rs  hypot.rs  mod.rs  sos.rs
src/math/: approx_cos.rs  approx_sin.rs  big_float.rs  bkm.rs  cbrt.rs  circular_fns.rs  exp.rs  feynman.rs  fp255.rs  fp492.rs  fp509.rs  log.rs  mod.rs  pow.rs  sqrt.rs
src/math/circular_fns/: approx_atan.rs  approx_cos.rs  approx_sin.rs  approx_sin_cos.rs  asin.rs  asin_acos.rs  atan.rs  cos.rs  mod.rs  reduce.rs  sin.rs  sin_cos.rs  tan.rs  two_over_pi.rs
src/math/circular_fns/cordic/: atan_table.rs  circular.rs  mod.rs
src/math/cordic/: atan_table.rs  circular.rs  mod.rs
src/to_str/: common.rs  dec_repr.rs  formatted.rs  mod.rs  powers_of_five.rs  to_fixed_point_dec.rs  to_fixed_prec.rs
tests/: test_add.rs  test_bin_math_fns.rs  test_bin_ops.rs  test_cmp.rs  test_cos_ge_2pi.txt  test_cos_lt_2pi.txt  test_div.rs  test_euclid.rs  test_fma.rs  test_from_random_str.rs  test_from_str.rs  test_from_str_subnormal.txt  test_hypot.rs  test_ln_subnormal.txt  test_log10_subnormal.txt  test_log2_subnormal.txt  test_math_fns.rs  test_mul.rs  test_powf.rs  test_powi.rs  test_props.rs  test_rem.rs  test_sin_ge_2pi.txt  test_sin_lt_2pi.txt  test_sos.rs  test_sub.rs  test_ternary_ops.rs  test_to_str.rs  test_to_str_fract_shortest_exp.txt  test_to_str_subnormal_shortest_exp.txt  test_unops.rs
