[package]
name = "f256"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Octuple-precision floating-point arithmetic."
readme = "README.md"
homepage = "https://github.com/mamrhein/f256.rs"
repository = "https://github.com/mamrhein/f256.rs"
documentation = "https://docs.rs/f256/"
license-file = "LICENSE.TXT"
keywords = ["number", "precision", "floating-point", "arithmetics"]
categories = ["data-structures", "mathematics"]
exclude = ["analysis/*", "tests/*"]

[dependencies]
f256_pow2_div_pow5_lut = { version = "0.1.0", path = "pow2_div_pow5_lut" }
f256_pow5_div_pow2_lut = { version = "0.1.0", path = "pow5_div_pow2_lut" }
f256_pow2_div_pow10_lut = { version = "0.2.0", path = "pow2_div_pow10_lut" }
f256_pow10_div_pow2_lut = { version = "0.1.0", path = "pow10_div_pow2_lut" }
num-traits = { version = "0.2.0", optional = true }

[dev-dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[features]
default = ["std"]
std = []

[workspace]
members = [".", "pow2_div_pow5_lut", "pow5_div_pow2_lut",
    "pow2_div_pow10_lut", "pow10_div_pow2_lut"]
exclude = ["analysis/calc_taylor_polynom_coeffs",
    "analysis/compute_required_bits", "analysis/payne_hanek"]
