[package]
name = "f256_pow5_div_pow2_lut"
version = "0.1.0"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Lookup table for crate `f256`."
readme = "README.md"
homepage = "https://github.com/mamrhein/f256.rs"
repository = "https://github.com/mamrhein/f256.rs"
documentation = "https://docs.rs/f256/"
license-file = "../LICENSE.TXT"

[dependencies]
