[package]
name = "calc_taylor_polynom_coeffs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
f256 = { version = "0.2", path = "../.."}

[workspace]
